# HH_API_DB_Postgres

./: README.md  main.py  pyproject.toml  requirements.txt
config/: config.py
src/: api_company.py  api_vacancy.py  company.py  config.py  create_table.py  get_data_from_db.py  insert_data_in_table.py  user_interaction.py  utils.py  vacancy.py
